Modify the home page to link the admin to be authorized in GitHub
